--- a/responses.ipynb
+++ b/responses.ipynb
@@ -40,6 +40,17 @@
     "  \"expert_advice\": null\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
